redone with Trunk

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,26 +1,18 @@
 [package]
-name = "run"
+name = "reservation-system"
 version = "0.1.0"
-authors = ["Otakar Hirš <otakar.hirs@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-# Package for Rust and WASM
-wasm-run = "0.9"
-
-# Used to make the CLI that will package our web app
-structopt = "0.3"
-
-# Helper to download blueprint's CSS
-yewprint-css = "0.1.0"
-
-[workspace]
-# Our actual web app
-members = ["app"]
-
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+yew = "0.18.0"
+yewtil = "0.4.0"
+yew-router = "0.15.0"
+yewprint = "0.1.0"
+reqwest = { version = "0.11", features = [ "json" ] }
+anyhow = "1.0.51"
+serde = "1.0.130"
+serde_json = "1.0.72"
+wasm-bindgen = "0.2.78"
+web-sys = { version = "0.3", features = [ "Window", "MediaQueryList" ] }
