--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -25,4 +25,4 @@ sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
 anyhow = { version = "1" }
 thiserror = "1.0"
 dotenv = "0.15.0"
-
+jsonwebtoken = "7"
