--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shared_lib = { path = "../shared-lib" }
+
 actix-identity = "0.3"
 actix-rt = "1.1"
 actix-web = "3.3"
