--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres:alpine
-ADD Up.sql /docker-entrypoint-initdb.d]
+ADD Up.sql /docker-entrypoint-initdb.d
 RUN chmod a+r /docker-entrypoint-initdb.d/*
 EXPOSE 6666
