--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -8,9 +8,8 @@ edition = "2018"
 [dependencies]
 shared_lib = { path = "../shared-lib" }
 
-actix-identity = "0.3"
-actix-rt = "1.1"
-actix-web = "3.3"
+actix-rt = "2"
+actix-web = { version = "4.0.0-beta.10" }
 chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
 env_logger = "0.8"
@@ -19,7 +18,6 @@ lazy_static = "1.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-uuid = { version = "0.8", features = ["serde", "v4"] }
 
 async-trait = "0.1"
 tokio = { version = "1", features = [ "full" ] }
