--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL=postgres://localhost?dbname=db&user=postgres&password=example
-AUTH_SERVICE_ADDRESS=127.0.0.1:8089
+AUTH_SERVICE_ADDRESS=localhost:8089
+DOMAIN_NAME=localhost
+SMTP_ADDRESS=localhost:2525
+
