--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,3 +16,4 @@ serde = "1.0.130"
 serde_json = "1.0.72"
 wasm-bindgen = "0.2.78"
 web-sys = { version = "0.3", features = [ "Window", "MediaQueryList" ] }
+uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
