--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 yew = "0.18.0"
 yewtil = "0.4.0"
 yew-router = "0.15.0"
-yewprint = "0.1.0"
+ybc = "0.2"
 reqwest = { version = "0.11", features = [ "json" ] }
 anyhow = "1.0.51"
 serde = "1.0.130"
