--- a/api-service/Cargo.toml
+++ b/api-service/Cargo.toml
@@ -19,3 +19,7 @@ actix-files = "0.6.0-beta.8"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0.70"
 chrono = { version = "0.4.19", features = [ "serde" ] }
+tracing = "0.1"
+tracing-subscriber = "0.2"
+
+thiserror = "1.0"
