Changed paths (localhost -> service names)

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DATABASE_URL=postgres://localhost?dbname=db&user=postgres&password=example
-AUTH_SERVICE_ADDRESS=localhost:8089
-DOMAIN_NAME=localhost
-SMTP_ADDRESS=localhost:2525
-
+DATABASE_URL=postgres://postgres:example@db/db
+AUTH_SERVICE_ADDRESS=auth:8089
+DOMAIN_NAME=pussyhub
+SMTP_ADDRESS=smtp:2525
