Fixed auth service to work with prev changes

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,6 @@
 FROM postgres:alpine
 ADD Up.sql /docker-entrypoint-initdb.d
 RUN chmod a+r /docker-entrypoint-initdb.d/*
-EXPOSE 6666
+
+#EXPOSE 6666
+EXPOSE 5432
