Removed unnecessary copy and fixed path

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -2,15 +2,13 @@ FROM rust:latest
 
 WORKDIR /pussyhub
 
-COPY .env ..
-COPY . .
-
+COPY .env .
 
 COPY ./auth-service ./auth-service
 COPY ./shared-lib ./shared-lib
 
-EXPOSE 8089
-
 WORKDIR /pussyhub/auth-service
+
+EXPOSE 8089
 
 ENTRYPOINT cargo run
