--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shared_lib = { path = "../shared-lib" }
 yew = "0.18.0"
 yewtil = "0.4.0"
 yew-router = "0.15.0"
@@ -17,3 +18,6 @@ serde_json = "1.0.72"
 wasm-bindgen = "0.2.78"
 web-sys = { version = "0.3", features = [ "Window", "MediaQueryList" ] }
 uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
+parking_lot = "0.11.2"
+lazy_static = "1.4.0"
+gloo = "0.4"
