--- a/shared-lib/Cargo.toml
+++ b/shared-lib/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-jsonwebtoken = "7"
+jwt-simple = "0.10.8"
 serde = "1.0"
 anyhow = { version = "1" }
 thiserror = { version = "1.0" }
