--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,14 +1,23 @@
 FROM rust:latest
 
-WORKDIR /pussyhub
+# local dependency files, everything will be rebuild if changed
+WORKDIR /pussyhub/
+COPY shared-lib/ shared-lib
+WORKDIR /pussyhub/auth-service
 
-COPY .env .
+# cache dependencies
+RUN echo "fn main() {}" > dummy.rs
+COPY auth-service/Cargo.toml .
+RUN sed -i 's#src/main.rs#dummy.rs#' Cargo.toml
+RUN cargo build
+RUN sed -i 's#dummy.rs#src/main.rs#' Cargo.toml
 
-COPY ./auth-service ./auth-service
-COPY ./shared-lib ./shared-lib
-
+# build
+WORKDIR /pussyhub/
+COPY . .
 WORKDIR /pussyhub/auth-service
 
 EXPOSE 8089
 
+# lazy way for sqlx to have a running database during build
 ENTRYPOINT cargo run
