--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "pussy-hub-client"
+name = "client"
 version = "0.1.0"
 edition = "2021"
+
+[[bin]]
+name = "client"
+path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
