--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -14,6 +14,7 @@ shared_lib = { path = "../shared-lib" }
 
 actix-rt = "2"
 actix-web = { version = "4.0.0-beta.10" }
+actix-cors = "0.6.0-beta.8"
 chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
 env_logger = "0.8"
