--- a/shared-lib/Cargo.toml
+++ b/shared-lib/Cargo.toml
@@ -10,3 +10,4 @@ jwt-simple = "0.10.8"
 serde = "1.0"
 anyhow = { version = "1" }
 thiserror = { version = "1.0" }
+validator = { version = "0.12", features = ["derive"] }
