improved docker compose startup

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE_URL=postgres://postgres:example@db/db
-AUTH_SERVICE_ADDRESS=auth:8089
+DATABASE_URL=postgresql://postgres:example@db/db
+AUTH_SERVICE_ADDRESS=127.0.0.1:8089
+AUTH_SERVICE_URL=http://127.0.0.1:8089
+API_SERVICE_ADDRESS=127.0.0.1:8001
+API_SERVICE_URL=http://127.0.0.1:8001
 DOMAIN_NAME=pussyhub
-SMTP_ADDRESS=smtp:2525
