--- a/api-service/Cargo.toml
+++ b/api-service/Cargo.toml
@@ -16,7 +16,7 @@ actix-web = "4.0.0-beta.11"
 actix-cors = "0.6.0-beta.4"
 tokio = { version = "1", features = ["full"]}
 dotenv = { version = "0.15.0" }
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
+sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "offline"] }
 async-trait = "0.1.51"
 anyhow = "1.0.45"
 actix-files = "0.6.0-beta.8"
