--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1.0"
 
 async-trait = "0.1"
 tokio = { version = "1", features = [ "full" ] }
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
+sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "offline" ] }
 anyhow = { version = "1" }
 thiserror = "1.0"
 dotenv = "0.15.0"
