--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=postgresql://postgres:example@db/db
-AUTH_SERVICE_ADDRESS=127.0.0.1:8089
+AUTH_SERVICE_ADDRESS=0.0.0.0:8089
 AUTH_SERVICE_URL=http://127.0.0.1:8089
-API_SERVICE_ADDRESS=127.0.0.1:8001
-API_SERVICE_URL=http://127.0.0.1:8001
+API_SERVICE_ADDRESS=0.0.0.0:8001
+API_SERVICE_URL=http://127.0.0.1:8001/api
 DOMAIN_NAME=pussyhub
