--- a/api-service/Cargo.toml
+++ b/api-service/Cargo.toml
@@ -25,5 +25,6 @@ serde_json = "1.0.70"
 chrono = { version = "0.4.19", features = [ "serde" ] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
+derive_more = "0.99.17"
 
 thiserror = "1.0"
