--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -25,5 +25,6 @@ uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
 parking_lot = "0.10.0"
 lazy_static = "1.4.0"
 gloo = "0.4"
+gloo-dialogs = "0.1.0"
 yewdux = "0.6.2"
 thiserror = "1.0"
