--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=postgres://postgres:example@db/db
 AUTH_SERVICE_ADDRESS=auth:8089
+FILE_SERVICE_ADDRESS=file:8090
 DOMAIN_NAME=pussyhub
 SMTP_ADDRESS=smtp:2525
