--- a/file-service/Cargo.toml
+++ b/file-service/Cargo.toml
@@ -12,9 +12,11 @@ path = "src/main.rs"
 [dependencies]
 shared_lib = { path = "../shared-lib" }
 
-actix-rt = "2"
-actix-web = { version = "4.0.0-beta.10" }
-actix-cors = "0.6.0-beta.8"
+actix-rt = "1"
+actix-web = { version = "3" }
+actix-cors = "0.5"
+actix-files = "0.5.0"
+actix-multipart = "0.3.0"
 chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
 env_logger = "0.8"
@@ -25,7 +27,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 
 async-trait = "0.1"
-tokio = { version = "1", features = [ "full" ] }
+tokio = { version = "0.2", features = [ "full" ] }
 #sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
 anyhow = { version = "1" }
 thiserror = "1.0"
