--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ AUTH_SERVICE_ADDRESS=0.0.0.0:8089
 AUTH_SERVICE_URL=http://127.0.0.1:8089/auth
 API_SERVICE_ADDRESS=0.0.0.0:8001
 API_SERVICE_URL=http://127.0.0.1:8001/api
+STREAM_SERVICE_URL=rtmp://127.0.0.1:1935/live
+AUTH_STREAM_SERVICE_URL=rtmp://127.0.0.1:1935/live_auth
 DOMAIN_NAME=pussyhub
