--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ version: '3.9'
 # docker-compose down --volumes
 # docker compose up
 
-
 services:
 
   db:
@@ -47,7 +46,7 @@ services:
     env_file:
       - ./.env
     ports:
-      - "127.0.0.1:8089:8089"
+      - "8089:8089"
     depends_on:
       smtp:
         condition: service_started
@@ -77,3 +76,11 @@ services:
     depends_on:
       db:
         condition: service_healthy
+  stream:
+    container_name: pussyhub_stream
+    image: alqutami/rtmp-hls
+    volumes:
+      - ./streaming/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "127.0.0.1:1935:1935"
+      - "127.0.0.1:8080:8080"
