--- a/streaming/nginx.conf
+++ b/streaming/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes  auto;
-#error_log  logs/error.log;
+# error_log /var/log/nginx/error.log;
 
 events {
     worker_connections 1024;
@@ -23,7 +23,10 @@ rtmp {
 
             # Called when a stream stops publishing.  Response is ignored.
             # on_publish_done http://127.0.0.1:8080/on_publish_done;
-
+            # for each received stream, transcode for adaptive streaming
+            # This single ffmpeg command takes the input and transforms
+            # the source into 4 different streams with different bitrates
+            # and qualities. # these settings respect the aspect ratio.
             exec_push  /usr/local/bin/ffmpeg -i rtmp://localhost:1935/$app/$name -async 1 -vsync -1
                         -c:v libx264 -c:a aac -b:v 256k  -b:a 64k  -vf "scale=480:trunc(ow/a/2)*2"  -tune zerolatency -preset superfast -crf 23 -f flv rtmp://localhost:1935/show/$name_low
                         -c:v libx264 -c:a aac -b:v 768k  -b:a 128k -vf "scale=720:trunc(ow/a/2)*2"  -tune zerolatency -preset superfast -crf 23 -f flv rtmp://localhost:1935/show/$name_mid
